; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/bxe/extr_bxe.c_bxe_sp_get_next.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/bxe/extr_bxe.c_bxe_sp_get_next.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.eth_spe = type { i32 }
%struct.bxe_softc = type { i64, %struct.eth_spe*, %struct.eth_spe*, %struct.eth_spe* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.eth_spe* (%struct.bxe_softc*)* @bxe_sp_get_next to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.eth_spe* @bxe_sp_get_next(%struct.bxe_softc* %0) #0 {
  %2 = alloca %struct.bxe_softc*, align 8
  %3 = alloca %struct.eth_spe*, align 8
  store %struct.bxe_softc* %0, %struct.bxe_softc** %2, align 8
  %4 = load %struct.bxe_softc*, %struct.bxe_softc** %2, align 8
  %5 = getelementptr inbounds %struct.bxe_softc, %struct.bxe_softc* %4, i32 0, i32 1
  %6 = load %struct.eth_spe*, %struct.eth_spe** %5, align 8
  store %struct.eth_spe* %6, %struct.eth_spe** %3, align 8
  %7 = load %struct.bxe_softc*, %struct.bxe_softc** %2, align 8
  %8 = getelementptr inbounds %struct.bxe_softc, %struct.bxe_softc* %7, i32 0, i32 1
  %9 = load %struct.eth_spe*, %struct.eth_spe** %8, align 8
  %10 = load %struct.bxe_softc*, %struct.bxe_softc** %2, align 8
  %11 = getelementptr inbounds %struct.bxe_softc, %struct.bxe_softc* %10, i32 0, i32 3
  %12 = load %struct.eth_spe*, %struct.eth_spe** %11, align 8
  %13 = icmp eq %struct.eth_spe* %9, %12
  br i1 %13, label %14, label %22

14:                                               ; preds = %1
  %15 = load %struct.bxe_softc*, %struct.bxe_softc** %2, align 8
  %16 = getelementptr inbounds %struct.bxe_softc, %struct.bxe_softc* %15, i32 0, i32 2
  %17 = load %struct.eth_spe*, %struct.eth_spe** %16, align 8
  %18 = load %struct.bxe_softc*, %struct.bxe_softc** %2, align 8
  %19 = getelementptr inbounds %struct.bxe_softc, %struct.bxe_softc* %18, i32 0, i32 1
  store %struct.eth_spe* %17, %struct.eth_spe** %19, align 8
  %20 = load %struct.bxe_softc*, %struct.bxe_softc** %2, align 8
  %21 = getelementptr inbounds %struct.bxe_softc, %struct.bxe_softc* %20, i32 0, i32 0
  store i64 0, i64* %21, align 8
  br label %31

22:                                               ; preds = %1
  %23 = load %struct.bxe_softc*, %struct.bxe_softc** %2, align 8
  %24 = getelementptr inbounds %struct.bxe_softc, %struct.bxe_softc* %23, i32 0, i32 1
  %25 = load %struct.eth_spe*, %struct.eth_spe** %24, align 8
  %26 = getelementptr inbounds %struct.eth_spe, %struct.eth_spe* %25, i32 1
  store %struct.eth_spe* %26, %struct.eth_spe** %24, align 8
  %27 = load %struct.bxe_softc*, %struct.bxe_softc** %2, align 8
  %28 = getelementptr inbounds %struct.bxe_softc, %struct.bxe_softc* %27, i32 0, i32 0
  %29 = load i64, i64* %28, align 8
  %30 = add nsw i64 %29, 1
  store i64 %30, i64* %28, align 8
  br label %31

31:                                               ; preds = %22, %14
  %32 = load %struct.eth_spe*, %struct.eth_spe** %3, align 8
  ret %struct.eth_spe* %32
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
